# wpbs

./: Cargo.toml
src/: database.rs  main.rs  registry.rs  runtime.rs  services.rs
src/runtime/plugins/: builder.rs
src/services/: discord.rs  job_scheduler.rs
src/services/discord/: requests.rs
src/utils/: channels.rs  env.rs
wit/: discord.wit
